[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/objects/assets.png" type="Texture" id=1]
[ext_resource path="res://objects/portal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 12 )

[node name="Portal" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 0, 16, 32 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AreaRight" type="Area2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="AreaRight"]
position = Vector2( -6, 4 )
shape = SubResource( 2 )

[node name="AreaLeft" type="Area2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2( 6, 4 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
